<resources>
    <string name="app_name">FutStreet</string>


    // Descriptions of slide on HomeFragment
    <string name="description_one">Organize suas partidas de forma rápida e prática.</string>
    <string name="description_two">Personalize as opções de seu jogo da melhor maneira.</string>
    <string name="description_three">Notificação com informações em tempo real de seu jogo.</string>

    //Hint teams names
    <string name="input_hint_team1">Time1</string>
    <string name="input_hint_team2">Time2</string>
    <string name="input_hint_team3">Time3</string>
    <string name="input_hint_team4">Time4</string>
    <string name="input_hint_team5">Time5</string>
    <string name="input_hint_team6">Time6</string>
    <string name="input_hint_team7">Time7</string>
    <string name="input_hint_team8">Time8</string>

    //Game Settings misc
    <string name="input_text_number_of_times">Números de tempos:</string>
    <string name="input_text_time_of_round">Tempo de partida:</string>
    <string name="input_hint_minutes">Minutos</string>
    <string name="alert_title_select_shirt_title">Selecione a camisa</string>

    //MainActitivty misc
    <string name="hint_history_empity">Nenhum jogo salvo no histórico</string>
    <string name="last_games">Últimos jogos</string>

    // Match titles
    <string name="match_draw">Empate</string>
    <string name="text_match_finish">Partida terminada</string>
    <string name="text_end_game">Fim de jogo</string>

    //Title buttons
    <string name="title_menu_button_newmatch">Amistoso</string>
    <string name="title_menu_button_tournament">Torneio</string>
    <string name="title_menu_button_about">Sobre</string>
    <string name="title_button_back">Voltar</string>
    <string name="title_button_ready">Pronto</string>
    <string name="title_button_start">Começar</string>
    <string name="title_button_pause">Pausar</string>
    <string name="title_button_continue">Continuar</string>
    <string name="title_button_restart">Reiniciar</string>
    <string name="title_button_cancel">Cancelar</string>

    //Questions
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="text_ask_cancel_game">Deseja cancelar o jogo?</string>
    <string name="text_ask_cancel_tournament">Deseja cancelar o torneio?</string>
    <string name="text_add_gol">Marcar gol para </string>

    //Navigation titles
    <string name="title_tournament_match_settings">Configuração do torneio</string>
    <string name="title_tournament_select">Configuração de times</string>
    <string name="title_game_settings">Configuração de jogo</string>
    <string name="title_currentGame">Partida em Andamento</string>
    <string name="title_waiting">Aguardando</string>
    
    //Tournament stage of matchs
    <string name="title_state_tournament_match_ready">Começar partida</string>
    <string name="title_state_tournament_match_running">Em andamento</string>
    <string name="title_state_tournament_match_ended">Encerrado</string>
    <string name="title_state_tournament_match_waiting">Aguardando</string>
    <string name="title_final">Final</string>
    <string name="title_button_saved_tournaments">Torneios salvos</string>
    <string name="title_button_new_tournament">Novo torneio</string>

    //Tournament Stages
    <string name="title_tab_quarters">Quartas</string>
    <string name="title_tab_semi">Semi</string>
    <string name="title_tab_final">Final</string>
    <string name="title_waiting_for_match">Selecione uma partida para começar!</string>
</resources>