<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".modules.tournamentSelect.TournamentTeamSettingFragment"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/blue">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/selectShirtTeam1Tournament"
            style="@style/shirt_select_tournament"
            android:src="@drawable/shirt_select"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/tournamentInputTeamName1"
            style="@style/inputText"
            android:hint="@string/input_hint_team1" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/selectShirtTeam5Tournament"
            style="@style/shirt_select_tournament"
            android:layout_marginStart="10dp"
            android:src="@drawable/shirt_select" />

        <EditText
            android:id="@+id/tournamentInputTeamName5"
            style="@style/inputText"
            android:layout_marginStart="16dp"
            android:hint="@string/input_hint_team5" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout1">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/selectShirtTeam2Tournament"
            style="@style/shirt_select_tournament"
            android:src="@drawable/shirt_select"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/tournamentInputTeamName2"
            style="@style/inputText"
            android:hint="@string/input_hint_team2" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/selectShirtTeam6Tournament"
            style="@style/shirt_select_tournament"
            android:layout_marginStart="10dp"
            android:src="@drawable/shirt_select" />

        <EditText
            android:id="@+id/tournamentInputTeamName6"
            style="@style/inputText"
            android:layout_marginStart="16dp"
            android:hint="@string/input_hint_team6" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout2">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/selectShirtTeam3Tournament"
            style="@style/shirt_select_tournament"
            android:src="@drawable/shirt_select"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/tournamentInputTeamName3"
            style="@style/inputText"
            android:hint="@string/input_hint_team3" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/selectShirtTeam7Tournament"
            style="@style/shirt_select_tournament"
            android:layout_marginStart="10dp"
            android:src="@drawable/shirt_select" />

        <EditText
            android:id="@+id/tournamentInputTeamName7"
            style="@style/inputText"
            android:layout_marginStart="16dp"
            android:hint="@string/input_hint_team7" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout3">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/selectShirtTeam4Tournament"
            style="@style/shirt_select_tournament"
            android:src="@drawable/shirt_select"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/tournamentInputTeamName4"
            style="@style/inputText"
            android:hint="@string/input_hint_team4" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/selectShirtTeam8Tournament"
            style="@style/shirt_select_tournament"
            android:layout_marginStart="10dp"
            android:src="@drawable/shirt_select" />

        <EditText
            android:id="@+id/tournamentInputTeamName8"
            style="@style/inputText"
            android:layout_marginStart="16dp"
            android:hint="@string/input_hint_team8" />

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonReadyTournament"
        style="@style/button_menu"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/green"
        android:text="@string/Ready"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCancelTournament"
        style="@style/button_menu"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/Cancel"
        android:textColor="@color/black"
        app:cornerRadius="10dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout4" />






</androidx.constraintlayout.widget.ConstraintLayout>