<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/blue"
    tools:context=".modules.matchFriendlySetting.MatchSettingFragment">


    <LinearLayout
        android:id="@+id/matchCard1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/selectShirtTeam1"
                style="@style/shirt_select"
                android:src="@drawable/shirt_select"
                tools:layout_editor_absoluteX="78dp"
                tools:layout_editor_absoluteY="346dp" />

            <EditText
                android:id="@+id/inputNameTeamOne"
                style="@style/inputText"
                android:hint="@string/input_hint_team1" />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:fontFamily="@font/baloo2semibold"
            android:text="X"
            android:textColor="@color/white"
            android:textSize="25sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/selectShirtTeam2"
            style="@style/shirt_select"
            android:src="@drawable/shirt_select"
            tools:layout_editor_absoluteX="266dp"
            tools:layout_editor_absoluteY="359dp" />

        <EditText
            android:id="@+id/inputNameTeamTwo"
            style="@style/inputText"
            android:hint="@string/input_hint_team2" />

    </LinearLayout>


    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewTimes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/yellow"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/matchCard1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/baloo2regular"
                android:text="@string/input_text_number_of_times"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/inputNumberOfTimes"
                style="@style/inputText"
                android:layout_width="50dp"
                android:layout_marginEnd="20dp"
                android:hint="1"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewTimeRounds"
        android:layout_width="wrap_content"
        android:layout_marginTop="15dp"
        app:cardCornerRadius="15dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cardViewTimes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/yellow">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:fontFamily="@font/baloo2regular"
                android:textSize="18sp"
                android:layout_marginStart="15dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_text_time_of_round"/>

            <EditText
                android:id="@+id/inputMinutesOfRound"
                style="@style/inputText"
                android:textColor="@color/black"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:maxLength="2"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/input_hint_minutes"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cardViewTimeRounds"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"

        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonReady"
            style="@style/button_menu"
            android:text="@string/title_button_ready"
            android:textColor="@color/white"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@color/green"
            app:cornerRadius="10dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCancel"
            style="@style/button_menu"
            app:cornerRadius="10dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/title_button_cancel"
            app:layout_constraintStart_toEndOf="@id/buttonReady"
            app:layout_constraintTop_toTopOf="@id/buttonReady"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>