<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navfragment"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.samirmaciel.futstreet.modules.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_gameSettingFragment"
            app:destination="@id/gameSettingFragment"
            app:enterAnim="@anim/enter_animation"
            app:exitAnim="@anim/exit_animation"/>
        <action
            android:id="@+id/action_homeFragment_to_tournamentSelectFragment"
            app:destination="@id/tournamentSelectFragment"
            app:enterAnim="@anim/enter_animation"
            app:exitAnim="@anim/exit_animation"/>
        <action
            android:id="@+id/action_homeFragment_to_tournamentOptionsFragment"
            app:destination="@id/tournamentOptionsFragment"
            app:enterAnim="@anim/enter_animation"
            app:exitAnim="@anim/exit_animation"/>
    </fragment>
    <fragment
        android:id="@+id/gameSettingFragment"
        android:name="com.samirmaciel.futstreet.modules.matchFriendlySetting.MatchSettingFragment"
        android:label="@string/title_game_settings"
        tools:layout="@layout/fragment_matchsettings" >
        <action
            android:id="@+id/action_gameSettingFragment_to_gameReadyFragment"
            app:destination="@id/gameReadyFragment"
            app:enterAnim="@anim/enter_animation"
            app:exitAnim="@anim/exit_animation"/>
        <action
            android:id="@+id/action_gameSettingFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@anim/enter_animation_inverted"
            app:exitAnim="@anim/exit_animation_inverted"/>
    </fragment>
    <fragment
        android:id="@+id/gameReadyFragment"
        android:name="com.samirmaciel.futstreet.modules.matchReady.MatchReadyFragment"
        android:label="@string/title_currentGame"
        tools:layout="@layout/fragment_matchready" >
        <action
            android:id="@+id/action_gameReadyFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@anim/enter_animation"
            app:exitAnim="@anim/exit_animation"/>
        <action
            app:enterAnim="@anim/enter_animation_inverted"
            app:exitAnim="@anim/exit_animation_inverted"
            android:id="@+id/action_gameReadyFragment_to_gameSettingFragment"
            app:destination="@id/gameSettingFragment" />
    </fragment>
    <fragment
        android:id="@+id/tournamentSelectFragment"
        android:name="com.samirmaciel.futstreet.modules.tournament.tournamentSetTeams.TournamentTeamSettingFragment"
        android:label="@string/title_tournament_select"
        tools:layout="@layout/fragment_tournamentteamsetting" >
        <action
            android:id="@+id/action_tournamentSelectFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@anim/enter_animation_inverted"
            app:exitAnim="@anim/exit_animation_inverted"/>
        <action
            android:id="@+id/action_tournamentSelectFragment_to_gameReadyFragment"
            app:destination="@id/gameReadyFragment"
            app:enterAnim="@anim/enter_animation"
            app:exitAnim="@anim/exit_animation"/>
        <action
            android:id="@+id/action_tournamentSelectFragment_to_gameSettingFragment"
            app:destination="@id/gameSettingFragment"
            app:enterAnim="@anim/enter_animation"
            app:exitAnim="@anim/exit_animation"/>
        <action
            android:id="@+id/action_tournamentSelectFragment_to_tournamentMatchSettingsFragment"
            app:destination="@id/tournamentMatchSettingsFragment"
            app:enterAnim="@anim/enter_animation"
            app:exitAnim="@anim/exit_animation"/>
    </fragment>
    <fragment
        android:id="@+id/tournamentMatchSettingsFragment"
        android:name="com.samirmaciel.futstreet.modules.tournament.tournamentMatchsSettings.TournamentMatchSettingsFragment"
        android:label="@string/title_tournament_match_settings"
        tools:layout="@layout/fragment_tournamentmatchsettings" >
        <action
            android:id="@+id/action_tournamentMatchSettingsFragment_to_gameReadyFragment"
            app:destination="@id/gameReadyFragment"
            app:enterAnim="@anim/enter_animation"
            app:exitAnim="@anim/exit_animation"/>
        <action
            android:id="@+id/action_tournamentMatchSettingsFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@anim/enter_animation_inverted"
            app:exitAnim="@anim/exit_animation_inverted"/>
    </fragment>
    <fragment
        android:id="@+id/tournamentOptionsFragment"
        android:name="com.samirmaciel.futstreet.modules.tournament.tournamentOptions.TournamentOptionsFragment"
        android:label="@string/title_tournament_match_settings"
        tools:layout="@layout/fragment_tournament_options" >
        <action
            android:id="@+id/action_tournamentOptionsFragment_to_tournamentSelectFragment"
            app:destination="@id/tournamentSelectFragment"
            app:enterAnim="@anim/enter_animation"
            app:exitAnim="@anim/exit_animation"/>
        <action
            android:id="@+id/action_tournamentOptionsFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@anim/enter_animation_inverted"
            app:exitAnim="@anim/exit_animation_inverted"/>

    </fragment>
</navigation>